# A-Sad-MidiMixer

./: .gitmodules  CMakeLists.txt  Command.cpp  LICENSE  README.md  main.cpp  midicontroller.cpp  midicontroller.h
Commands/: Command.h
Content/: Slider.qml
Mixers/NanoKontrol2/: ButtonMap.json  ButtonMap.json.autosave  NanoKontrol2.qml  VolumeFader.qml  nanokontrol2.cpp  nanokontrol2.h
Volume/: volume.cpp  volume.h  volumelistener.cpp  volumelistener.h
Volume/Helper/: VolumeIObserver.h  VolumeISubject.h
src/: midicontroller.cpp
